created myScript.js, added content scripts to manifest

--- a/login.html
+++ b/login.html
@@ -7,18 +7,13 @@
 <html>
 
 <head>
-  <title>Getting Started Extension's Popup</title>
+  <meta charset="utf-8">
+  <title>Extension</title>
   <link rel="stylesheet" href="style.css">
 
-  <!--
-      - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
-    -->
 </head>
 
-<body>
+<body id="login-page">
   <header id="header">
     <img class="header-logo" src="icon.png" alt="">
     <h1 class="title">Ext Name</h1>
@@ -27,10 +22,7 @@
   <section class="login">
 
   </section>
-  <section>
 
-  </section>
 </body>
-<script src="popup.js"></script>
 
 </html>
