--- a/wallets.html
+++ b/wallets.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>Extension</title>
   <link rel="stylesheet" href="style.css">
-
+  <script src="myScript.js" type="text/javascript">
+  </script>
 </head>
 
 <body id="wallets-page">
