added rates to extension

--- a/wallets.html
+++ b/wallets.html
@@ -16,7 +16,7 @@
   </header>
   <section>
     <h2 class="subtitle">Current Rates</h2>
-    <div class="currentrates">
+    <div class="rates">
 
     </div>
   </section>
