created table in html

--- a/wallets.html
+++ b/wallets.html
@@ -16,13 +16,45 @@
   </header>
   <section>
     <h2 class="subtitle">Current Rates</h2>
-    <div class="rates">
+    <div class="container-inner rates">
 
     </div>
   </section>
   <section class="container">
     <h2 class="subtitle">Wallets</h2>
-    <div class="wallets">
+    <div class="container-inner wallets">
+      <table>
+        <tr>
+          <td class="cell-item number">1</td>
+          <td class="cell-item currency">2</td>
+          <td class="cell-item icon"> </td>
+          <td class="cell-item number">3</td>
+          <td class="cell-item currency">4</td>
+        </tr>
+        <tr>
+          <td class="cell-item number">1</td>
+          <td class="cell-item currency">2</td>
+          <td class="cell-item icon"> </td>
+          <td class="cell-item number">3</td>
+          <td class="cell-item currency">4</td>
+        </tr>
+        <tr>
+          <td class="cell-item number">1</td>
+          <td class="cell-item currency">2</td>
+          <td class="cell-item icon"> </td>
+          <td class="cell-item number">3</td>
+          <td class="cell-item currency">4</td>
+        </tr>
+        <tr>
+          <td class="cell-item number">1</td>
+          <td class="cell-item currency">2</td>
+          <td class="cell-item icon"> </td>
+          <td class="cell-item number">3</td>
+          <td class="cell-item currency">4</td>
+        </tr>
+
+
+      </table>
 
     </div>
   </section>
