created classes, added styling to table

--- a/wallets.html
+++ b/wallets.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
   <title>Extension</title>
   <link rel="stylesheet" href="style.css">
+
   <script src="myScript.js" type="text/javascript">
   </script>
 </head>
 
 <body id="wallets-page">
-  <header class="container" id="header">
+  <header class="container add-border" id="header">
     <img class="header-logo" src="icon.png" alt="">
     <h1 class="title">Ext Name</h1>
   </header>
@@ -18,43 +19,45 @@
     <h2 class="subtitle">Current Rates</h2>
     <div class="container-inner rates">
 
+      <table>
+        <tr>
+          <td class="cell-item currency crypto-currency">BTC</td>
+          <td class="cell-item adjust-number add-border">1</td>
+          <td class="cell-item icon"> ➡️ </td>
+          <td class="cell-item fixed-number">13,0409</td>
+          <td class="cell-item currency native-currency">GBP</td>
+        </tr>
+        <tr>
+          <td class="cell-item currency">BTC</td>
+          <td class="cell-item adjust-number add-border">1</td>
+          <td class="cell-item icon"> ➡️ <span class="glyphicon glyphicon-transfer"></span> </td>
+          <td class="cell-item fixed-number">13,0409</td>
+          <td class="cell-item currency">GBP</td>
+        </tr>
+        <tr>
+          <td class="cell-item currency">BTC</td>
+          <td class="cell-item adjust-number add-border">1</td>
+          <td class="cell-item icon"> ➡️ <span class="glyphicon glyphicon-transfer"></span> </td>
+          <td class="cell-item fixed-number">13,0409</td>
+          <td class="cell-item currency native-currency">GBP</td>
+        </tr>
+        <tr>
+          <td class="cell-item currency">BTC</td>
+          <td class="cell-item adjust-number add-border">1</td>
+          <td class="cell-item icon"> ➡️ <span class="glyphicon glyphicon-transfer"></span> </td>
+          <td class="cell-item fixed-number">13,0409</td>
+          <td class="cell-item currency">GBP</td>
+        </tr>
+
+
+      </table>
+
     </div>
   </section>
   <section class="container">
     <h2 class="subtitle">Wallets</h2>
     <div class="container-inner wallets">
-      <table>
-        <tr>
-          <td class="cell-item number">1</td>
-          <td class="cell-item currency">2</td>
-          <td class="cell-item icon"> </td>
-          <td class="cell-item number">3</td>
-          <td class="cell-item currency">4</td>
-        </tr>
-        <tr>
-          <td class="cell-item number">1</td>
-          <td class="cell-item currency">2</td>
-          <td class="cell-item icon"> </td>
-          <td class="cell-item number">3</td>
-          <td class="cell-item currency">4</td>
-        </tr>
-        <tr>
-          <td class="cell-item number">1</td>
-          <td class="cell-item currency">2</td>
-          <td class="cell-item icon"> </td>
-          <td class="cell-item number">3</td>
-          <td class="cell-item currency">4</td>
-        </tr>
-        <tr>
-          <td class="cell-item number">1</td>
-          <td class="cell-item currency">2</td>
-          <td class="cell-item icon"> </td>
-          <td class="cell-item number">3</td>
-          <td class="cell-item currency">4</td>
-        </tr>
 
-
-      </table>
 
     </div>
   </section>
