--- a/wallets.html
+++ b/wallets.html
@@ -20,34 +20,14 @@
     <div class="container-inner rates">
 
       <table>
-        <tr>
-          <td class="cell-item currency crypto-currency">BTC</td>
+        <tr class="table-row">
+          <td class="cell-item currency base-currency">BTC</td>
           <td class="cell-item adjust-number add-border">1</td>
           <td class="cell-item icon"> ➡️ </td>
           <td class="cell-item fixed-number">13,0409</td>
           <td class="cell-item currency native-currency">GBP</td>
         </tr>
-        <tr>
-          <td class="cell-item currency">BTC</td>
-          <td class="cell-item adjust-number add-border">1</td>
-          <td class="cell-item icon"> ➡️ <span class="glyphicon glyphicon-transfer"></span> </td>
-          <td class="cell-item fixed-number">13,0409</td>
-          <td class="cell-item currency">GBP</td>
-        </tr>
-        <tr>
-          <td class="cell-item currency">BTC</td>
-          <td class="cell-item adjust-number add-border">1</td>
-          <td class="cell-item icon"> ➡️ <span class="glyphicon glyphicon-transfer"></span> </td>
-          <td class="cell-item fixed-number">13,0409</td>
-          <td class="cell-item currency native-currency">GBP</td>
-        </tr>
-        <tr>
-          <td class="cell-item currency">BTC</td>
-          <td class="cell-item adjust-number add-border">1</td>
-          <td class="cell-item icon"> ➡️ <span class="glyphicon glyphicon-transfer"></span> </td>
-          <td class="cell-item fixed-number">13,0409</td>
-          <td class="cell-item currency">GBP</td>
-        </tr>
+
 
 
       </table>
