--- a/wallets.html
+++ b/wallets.html
@@ -21,14 +21,14 @@
 
       <table>
         <tr class="table-row">
-          <td class="cell-item currency base-currency">BTC</td>
+          <td class="cell-item currency base-currency">EXAMPLE</td>
           <td class="cell-item adjust-number add-border">1</td>
           <td class="cell-item icon"> ➡️ </td>
           <td class="cell-item fixed-number">13,0409</td>
           <td class="cell-item currency native-currency">GBP</td>
         </tr>
 
-
+        <!-- Extra rows are being added after here -->
 
       </table>
 
