restyled	added for loop to wallets to draw icons

--- a/wallets.html
+++ b/wallets.html
@@ -11,33 +11,34 @@
 </head>
 
 <body id="wallets-page">
-  <header class="container add-border" id="header">
+  <header class="container" id="header">
     <img class="header-logo" src="icon.png" alt="">
     <h1 class="title">Ext Name</h1>
   </header>
-  <section>
-    <h2 class="subtitle">Current Rates</h2>
+  <!-- <section>
+    <h2 class="subtitle">Rate</h2>
     <div class="container-inner rates">
 
       <table>
-        <tr class="table-row">
-          <td class="cell-item currency base-currency">EXAMPLE</td>
-          <td class="cell-item adjust-number add-border">1</td>
-          <td class="cell-item icon"> ➡️ </td>
-          <td class="cell-item fixed-number">13,0409</td>
-          <td class="cell-item currency native-currency">GBP</td>
-        </tr>
-
-        <!-- Extra rows are being added after here -->
-
+        <td class="cell-item currency"> <img class="crypto-img" src="btc.png" alt=""></td>
+        <td class="cell-item currency"> <img class="crypto-img" src="bch.png" alt=""></td>
+        <td class="cell-item currency"> <img class="crypto-img" src="ltc.png" alt=""></td>
+        <td class="cell-item currency"> <img class="crypto-img" src="eth.jpg" alt=""></td>
       </table>
 
     </div>
-  </section>
+  </section> -->
   <section class="container">
-    <h2 class="subtitle">Wallets</h2>
     <div class="container-inner wallets">
 
+      <table class="table">
+        <tr class="table-row">
+          <td class="cell-item currency">
+            <h2 class="subtitle">My Portfolio</h2>
+          </td>
+        </tr>
+
+      </table>
 
     </div>
   </section>
