replaced rates table with ul

--- a/wallets.html
+++ b/wallets.html
@@ -15,19 +15,16 @@
     <img class="header-logo" src="icon.png" alt="">
     <h1 class="title">Ext Name</h1>
   </header>
-  <!-- <section>
+  <section>
     <h2 class="subtitle">Rate</h2>
     <div class="container-inner rates">
 
-      <table>
-        <td class="cell-item currency"> <img class="crypto-img" src="btc.png" alt=""></td>
-        <td class="cell-item currency"> <img class="crypto-img" src="bch.png" alt=""></td>
-        <td class="cell-item currency"> <img class="crypto-img" src="ltc.png" alt=""></td>
-        <td class="cell-item currency"> <img class="crypto-img" src="eth.jpg" alt=""></td>
+      <table class="table">
+
       </table>
 
     </div>
-  </section> -->
+  </section>
   <section class="container">
     <div class="container-inner wallets">
 
