style subtitle, formatting of wallets table

--- a/wallets.html
+++ b/wallets.html
@@ -13,14 +13,16 @@
 <body id="wallets-page">
   <header class="container" id="header">
     <img class="header-logo" src="icon.png" alt="">
-    <h1 class="title">Ext Name</h1>
+    <h1 class="title">Goldfish</h1>
   </header>
   <section>
     <h2 class="subtitle">Rate</h2>
     <div class="container-inner rates">
 
-      <table class="table">
+      <table class="table banner-rates">
+        <tr class="table-row ">
 
+        </tr>
       </table>
 
     </div>
@@ -28,12 +30,9 @@
   <section class="container">
     <div class="container-inner wallets">
 
+      <h2 class="subtitle brdr-top">Your Portfolio</h2>
       <table class="table">
-        <tr class="table-row">
-          <td class="cell-item currency">
-            <h2 class="subtitle">My Portfolio</h2>
-          </td>
-        </tr>
+        <!-- <td class="cell-item arrows"> ↔ </td> -->
 
       </table>
 
