--- a/wallets.html
+++ b/wallets.html
@@ -12,7 +12,7 @@
 
 <body id="wallets-page">
   <header class="container" id="header">
-    <h1 class="title">Goldfish</h1>
+    <h1 class="title">Goldfish Crypto</h1>
     <img class="header-logo" src="icon.png" alt="">
   </header>
   <section>
