removed rates banner

--- a/wallets.html
+++ b/wallets.html
@@ -13,7 +13,7 @@
 <body id="wallets-page">
   <header class="container" id="header">
     <h1 class="title">Goldfish Crypto</h1>
-    <img class="header-logo" src="icon.png" alt="">
+    <img class="header-logo" src="images/icon.png" alt="">
   </header>
   <section>
     <h2 class="subtitle">Rate</h2>
