functional, still not calculating amount*input variable

--- a/wallets.html
+++ b/wallets.html
@@ -12,21 +12,22 @@
 
 <body id="wallets-page">
   <header class="container" id="header">
-    <h1 class="title">Goldfish Crypto</h1>
+    <h1 class="title">Goldfish</h1>
     <img class="header-logo" src="images/icon.png" alt="">
   </header>
   <section>
-    <h2 class="subtitle">Rate</h2>
+
     <div class="container-inner rates">
 
-      <table class="table banner-rates">
-        <tr class="table-row ">
+      <h2 class="subtitle brdr-top">Rate</h2>
+      <table class="table">
 
-        </tr>
       </table>
 
     </div>
   </section>
+
+
   <section class="container">
     <div class="container-inner wallets">
 
@@ -38,6 +39,7 @@
 
     </div>
   </section>
+
 </body>
 
 </html>
