added arrow buttons, created multiply function, Not Working

--- a/wallets.html
+++ b/wallets.html
@@ -20,8 +20,17 @@
     <div class="container-inner rates">
 
       <h2 class="subtitle brdr-top">Rate</h2>
-      <table class="table">
+      <table class="table rates-table">
+        <tr>
 
+          <td class="cell-item icon">
+            <img class="crypto-img" src="images/placeholder.png" alt=""></td>;
+          <td>
+            <input class="base-currency" type="text" id="input" value="1"></td>
+          <td class="cell-item base-currency name-currency">Currency</td>
+          <td class="cell-item base-currency"><button class="arrow-button" type="button" name="button">→</button></td>
+          <td class="cell-item base-currency">$10,989</td>
+        </tr>
       </table>
 
     </div>
