change style, added tr borders

--- a/wallets.html
+++ b/wallets.html
@@ -24,12 +24,11 @@
         <tr>
 
           <td class="cell-item icon">
-            <img class="crypto-img" src="images/placeholder.png" alt=""></td>;
+            <img class="crypto-img" src="images/placeholder.png" alt=""></td>
           <td>
-            <input class="base-currency" type="text" id="input" value="1"></td>
+            <input class="base-currency input myInput1" type="text" value="1"></td>
           <td class="cell-item base-currency name-currency">Currency</td>
-          <td class="cell-item base-currency"><button class="arrow-button" type="button" name="button">→</button></td>
-          <td class="cell-item base-currency">$10,989</td>
+          <td class="cell-item base-currency"><span class="result1"></span></td>
         </tr>
       </table>
 
