fixed addAccounts function

--- a/wallets.html
+++ b/wallets.html
@@ -15,7 +15,7 @@
     <h1 class="title">Goldfish</h1>
     <img class="img" src="images/icon.png" alt="">
   </header>
-
+<!--
   <section>
     <div class="container-inner rates">
       <table class="table rates-table">
@@ -37,23 +37,7 @@
       </table>
 
     </div>
-  </section>
-
-
-  <section class="container">
-    <div class="container-inner wallets">
-
-      <table class="table">
-        <tr class="table-row">
-          <td >
-            <p class="subtitle">Your Portfolio</p>
-          </td>
-        </tr>
-
-      </table>
-
-    </div>
-  </section>
+  </section> -->
 
 </body>
 
