--- a/server/static/index.html
+++ b/server/static/index.html
@@ -4,22 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Landing Page</title>
 </head>
 <body>
-<a class="signUpLink" href="">Sign Up</a>
-
-<script>
-const responseType = "code";
-const clientId
-    = "522442f2d6c15f7007af2c7eaf8c59004ce8ebd28462f035acbd8137d3c6f5c4";
-const redirectUrl = "http://localhost:8080/oauth/callback";
-const state = "88888888888888";
-const scope = "wallet:accounts:read";
-
-const url = `https://www.coinbase.com/oauth/authorize?response_type=${responseType}&client_id=${clientId}&redirect_uri=${redirectUrl}&state=${state}&scope=${scope}`;
-const link = document.querySelector(".signUpLink");
-link.setAttribute("href", url);
-</script>
+    <a href="https://www.coinbase.com/oauth/authorize?response_type=code&client_id=522442f2d6c15f7007af2c7eaf8c59004ce8ebd28462f035acbd8137d3c6f5c4&redirect_uri=http://localhost:8080/oauth&state=1234&scope=wallet:accounts:read">Sign Up</a>
 </body>
 </html>
