added js for login page

--- a/wallets.html
+++ b/wallets.html
@@ -11,33 +11,16 @@
 </head>
 
 <body>
-  <header class="header">
-    <h1 class="title">Goldfish</h1>
-    <img class="img" src="images/icon.png" alt="">
-  </header>
-<!--
-  <section>
-    <div class="container-inner rates">
-      <table class="table rates-table">
-        <tr class="table-row">
-          <td >
-            <p class="subtitle">Rate</p>
-          </td>
-        </tr>
+<!-- <div class="login-content">
+<div class="content-container">
+<img class="login-icon" src="/images/icon.png" alt="">
+<button class="login-button" type="button" name="button">Sign in with Coinbase</button>
+</div>
 
-        <tr class="table-row">
-          <td style="width:25%">
-            <img class="img" src="images/placeholder.png" alt=""></td>
-          <td>
-            <input class="input" placeholder="i" maxlength="2" size="1" type="text">
-          </td>
-          <td class="crypto-currency-name">Bitcoin</td>
-          <td class="result-txt"> $13,000</td>
-        </tr>
-      </table>
-
-    </div>
-  </section> -->
+<div class="madeby">
+<p>Made by <a href="murphyme.co.uk#projects">Jack Murphy</a></p>
+</div>
+</div> -->
 
 </body>
 
