--- a/server/static/index.html
+++ b/server/static/index.html
@@ -7,6 +7,6 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <a href="https://www.coinbase.com/oauth/authorize?response_type=code&client_id=522442f2d6c15f7007af2c7eaf8c59004ce8ebd28462f035acbd8137d3c6f5c4&redirect_uri=http://localhost:8080/oauth&state=1234&scope=wallet:accounts:read">Sign Up</a>
+    <!-- <a href="https://www.coinbase.com/oauth/authorize?response_type=code&client_id=522442f2d6c15f7007af2c7eaf8c59004ce8ebd28462f035acbd8137d3c6f5c4&redirect_uri=http://localhost:8080/oauth&state=1234&scope=wallet:accounts:read">Sign Up</a> -->
 </body>
 </html>
