--- a/wallets.html
+++ b/wallets.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>Extension</title>
   <link rel="stylesheet" href="style.css">
 
@@ -11,16 +13,6 @@
 </head>
 
 <body>
-<!-- <div class="login-content">
-<div class="content-container">
-<img class="login-icon" src="/images/icon.png" alt="">
-<button class="login-button" type="button" name="button">Sign in with Coinbase</button>
-</div>
-
-<div class="madeby">
-<p>Made by <a href="murphyme.co.uk#projects">Jack Murphy</a></p>
-</div>
-</div> -->
 
 </body>
 
