changed txt on success.html

--- a/server/static/success.html
+++ b/server/static/success.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h2>Success!!</h2>
-    <p>The application has been successfully authorised</p>
+    <p>Goldfish has been successfully authorised</p>
 </body>
 </html>
