created s-c & content-box classes in success.html

--- a/server/static/success.html
+++ b/server/static/success.html
@@ -9,7 +9,14 @@
     <title>Success page</title>
 </head>
 <body>
+
+  <div class="section-container">  
+  <div class="content-box">
     <h2>Success!!</h2>
     <p>Goldfish has been successfully authorised</p>
+  </div>
+</div>
+
+
 </body>
 </html>
