--- a/server/static/success.html
+++ b/server/static/success.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="/static/static-style.css">
+    <link rel="stylesheet" href="static-style.css">
     <title>Success page</title>
 </head>
 <body>
 
-  <div class="section-container">  
+  <div class="oauth-container">
   <div class="content-box">
-    <h2>Success!!</h2>
-    <p>Goldfish has been successfully authorised</p>
-  </div>
+    <h2>Success</h2>
+    <p><strong>crypto-balance</strong> has been successfully authorised to access your Coinbase account.</p>
 </div>
 
 
