--- a/wallets.html
+++ b/wallets.html
@@ -7,7 +7,7 @@
 
   <title>Extension</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="manifest" href="/manifest.json">
   <script src="myScript.js" type="text/javascript">
   </script>
 </head>
