style Rates page information

--- a/wallets.html
+++ b/wallets.html
@@ -14,6 +14,88 @@
 
 <body>
 
+<div class="header">
+  <h2 class="header__title">Chocolate coin</h2>
+</div>
+
+<div class="content-rates">
+<h2 class="table__title">Rates</h2>
+  <table class="table-rates">
+    <tr class="table-rates__row">
+      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-code">BTC</td>
+      <td class="table-rates__equals"> ≃ </td>
+      <td class="table-rates__currency-symbol"> $ </td>
+      <td class="table-rates__currency-amount">5570</td>
+    </tr>
+    <tr class="table-rates__row">
+      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-code">BTC</td>
+      <td class="table-rates__equals"> ≃ </td>
+      <td class="table-rates__currency-symbol"> $ </td>
+      <td class="table-rates__currency-amount">5570</td>
+    </tr>
+    <tr class="table-rates__row">
+      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-code">BTC</td>
+      <td class="table-rates__equals"> ≃ </td>
+      <td class="table-rates__currency-symbol"> $ </td>
+      <td class="table-rates__currency-amount">5570</td>
+    </tr>
+    <tr class="table-rates__row">
+      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-code">BTC</td>
+      <td class="table-rates__equals"> ≃ </td>
+      <td class="table-rates__currency-symbol"> $ </td>
+      <td class="table-rates__currency-amount">5570</td>
+    </tr>
+    <tr class="table-rates__row">
+      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-code">BTC</td>
+      <td class="table-rates__equals"> ≃ </td>
+      <td class="table-rates__currency-symbol"> $ </td>
+      <td class="table-rates__currency-amount">5570</td>
+    </tr>
+  </table>
+</div>
+
+
+<div class="content-accounts">
+<h2 class="table__title">Your Wallets</h2>
+  <table class="table-accounts">
+    <tr class="table-accounts__row">
+      <td class="table-accounts__icon"><img class="placeholder" src="images/icon.png"/></td>
+      <td class="table-accounts__crypto-amount">0.00044</td>
+      <td class="table-accounts__equals"> ≃ </td>
+      <td class="table-accounts__currency-symbol"> $ </td>
+      <td class="table-accounts__currency-amount">70</td>
+    </tr>
+    <tr class="table-accounts__row">
+      <td class="table-accounts__icon"><img class="placeholder" src="images/icon.png"/></td>
+      <td class="table-accounts__crypto-amount">0.00044</td>
+      <td class="table-accounts__equals"> ≃ </td>
+      <td class="table-accounts__currency-symbol"> $ </td>
+      <td class="table-accounts__currency-amount">70</td>
+    </tr>
+    <tr class="table-accounts__row">
+      <td class="table-accounts__icon"><img class="placeholder" src="images/icon.png"/></td>
+      <td class="table-accounts__crypto-amount">0.00044</td>
+      <td class="table-accounts__equals"> ≃ </td>
+      <td class="table-accounts__currency-symbol"> $ </td>
+      <td class="table-accounts__currency-amount">70</td>
+    </tr>
+  </table>
+</div>
+
+<div class="footer">
+  <ul class="footer-menu">
+    <li class="footer-menu__link">J</li>
+    <li class="footer-menu__link">?</li>
+  </ul>
+
+</div>
+
+
 </body>
 
 </html>
